@@ -1265,6 +1265,50 @@
 8236,5,6,1,0,0x1,0,10,0,yes,0,0,0,magic,0,	MER_LEXDIVINA,Lex_Divina
 8237,9,6,1,0,0x1,0,1,1,yes,0,0,0,magic,0,	MER_ESTIMATION,Sense
 
+// Elemental Spirits Skills
+//8401,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_CIRCLE_OF_FIRE,
+//8402,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_FIRE_CLOAK,
+//8403,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_FIRE_MANTLE,
+//8404,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_WATER_SCREEN,
+//8405,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_WATER_DROP,
+//8406,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_WATER_BARRIER,
+//8407,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_WIND_STEP,
+//8408,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_WIND_CURTAIN,
+//8409,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_ZEPHYR,
+//8410,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_SOLID_SKIN,
+//8411,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_STONE_SHIELD,
+//8412,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_POWER_OF_GAIA,
+//8413,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_PYROTECHNIC,
+//8414,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_HEATER,
+//8415,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_TROPIC,
+//8416,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_AQUAPLAY,
+//8417,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_COOLER,
+//8418,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_CHILLY_AIR,
+//8419,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_GUST,
+//8420,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_BLAST,
+//8421,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_WILD_STORM,
+//8422,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_PETROLOGY,
+//8423,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_CURSED_SOIL,
+//8424,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_UPHEAVAL,
+//8425,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_FIRE_ARROW,
+//8426,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_FIRE_BOMB,
+//8427,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_FIRE_BOMB_ATK,
+//8428,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_FIRE_WAVE,
+//8429,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_FIRE_WAVE_ATK,
+//8430,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_ICE_NEEDLE,
+//8431,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_WATER_SCREW,
+//8432,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_WATER_SCREW_ATK,
+//8433,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_TIDAL_WEAPON,
+//8434,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_WIND_SLASH,
+//8435,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_HURRICANE,
+//8436,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_HURRICANE_ATK,
+//8437,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_TYPOON_MIS,
+//8438,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_TYPOON_MIS_ATK,
+//8439,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_STONE_HAMMER,
+//8440,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_ROCK_CRUSHER,
+//8441,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_ROCK_CRUSHER_ATK,
+//8442,0,0,0,0,0,0,??,0,no,0,0,0,none,0,		EL_STONE_RAIN,
+
 // Guild Skills
 10000,0,0,0,0,0,0,1,0,no,0,0x10,0,none,0,        GD_APPROVAL,Official Guild Approval
 10001,0,0,0,0,0,0,1,0,no,0,0x10,0,none,0,        GD_KAFRACONTRACT,Kafra Contract
