@@ -1493,6 +1493,49 @@ enum e_skill {
 	MER_SCAPEGOAT,
 	MER_LEXDIVINA,
 	MER_ESTIMATION,
+
+	EL_CIRCLE_OF_FIRE = 8401,
+	EL_FIRE_CLOAK,
+	EL_FIRE_MANTLE,
+	EL_WATER_SCREEN,
+	EL_WATER_DROP,
+	EL_WATER_BARRIER,
+	EL_WIND_STEP,
+	EL_WIND_CURTAIN,
+	EL_ZEPHYR,
+	EL_SOLID_SKIN,
+	EL_STONE_SHIELD,
+	EL_POWER_OF_GAIA,
+	EL_PYROTECHNIC,
+	EL_HEATER,
+	EL_TROPIC,
+	EL_AQUAPLAY,
+	EL_COOLER,
+	EL_CHILLY_AIR,
+	EL_GUST,
+	EL_BLAST,
+	EL_WILD_STORM,
+	EL_PETROLOGY,
+	EL_CURSED_SOIL,
+	EL_UPHEAVAL,
+	EL_FIRE_ARROW,
+	EL_FIRE_BOMB,
+	EL_FIRE_BOMB_ATK,
+	EL_FIRE_WAVE,
+	EL_FIRE_WAVE_ATK,
+	EL_ICE_NEEDLE,
+	EL_WATER_SCREW,
+	EL_WATER_SCREW_ATK,
+	EL_TIDAL_WEAPON,
+	EL_WIND_SLASH,
+	EL_HURRICANE,
+	EL_HURRICANE_ATK,
+	EL_TYPOON_MIS,
+	EL_TYPOON_MIS_ATK,
+	EL_STONE_HAMMER,
+	EL_ROCK_CRUSHER,
+	EL_ROCK_CRUSHER_ATK,
+	EL_STONE_RAIN,
 };
 
 /// The client view ids for land skills.
